# music-match

./: .gitignore  README.md  STRUCTURE_VERIFICATION.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  cli.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/clustering/: __init__.py  cluster.py  describe.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/feature_extraction/: __init__.py  batch_extract.py  extract.py  normalize.py  spotify_features.py
backend/app/quiz/: __init__.py  questions.py  scoring.py
backend/app/recommendations/: __init__.py  engine.py
backend/app/services/: __init__.py  spotify.py
backend/scripts/: seed_sample_data.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/Quiz/: QuestionCard.tsx  Quiz.tsx  QuizContainer.tsx  QuizIntro.tsx  index.ts
frontend/src/components/Recommendations/: ClusterExplorer.tsx  ClusterFilter.tsx  RecommendationGrid.tsx  Recommendations.tsx  SongCard.tsx  index.ts
frontend/src/components/Results/: AdjacentClusters.tsx  ClusterMatch.tsx  ProfileRadar.tsx  Results.tsx  ResultsContainer.tsx  index.ts
frontend/src/components/Spotify/: AudioPlayer.tsx  SpotifySearch.tsx  SpotifyTrackCard.tsx  index.ts
frontend/src/components/Visualizations/: ClusterScatter.tsx  index.ts  (+2 more)
frontend/src/hooks/: index.ts  useApi.ts  useClusterVisualization.ts  useQuiz.ts  useRecommendations.ts
frontend/src/types/: index.ts
(+6 files in other folders)
