[tool.poetry]
name = "music-match-backend"
version = "1.0.0"
description = "Music Match Backend API with FastAPI"
authors = ["Music Match Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
essentia = "^2.1b6.dev1034"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
pydantic = "^2.4.0"
aiosqlite = "^0.19.0"
spotipy = "^2.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
